# zenoh_hello_world

./: docker-compose.yml
app/: Dockerfile  pub.py  sub.py
protos/: hello.proto  metrics.proto
rust_sub/: Cargo.toml  Dockerfile  build.rs
rust_sub/messaging/: Cargo.toml
rust_sub/messaging/src/: publisher.rs  subscriber.rs
rust_sub/messaging/src/zenoh/: publisher.rs  subscriber.rs
rust_sub/src/: config.rs  logger.rs  logging.rs  main.rs  subscriber.rs
rust_sub/src/messaging/: mod.rs
rust_sub/src/messaging/zenoh/: publisher.rs  subscriber.rs
rust_sub/src/models/: hello_msg.rs  metrics_msg.rs  mod.rs
rust_sub/src/proto/: mod.rs
rust_sub/src/tasks/: hello.rs  metrics.rs  mod.rs  transform.rs  types.rs
